fix(styles): fix card style on mobile

--- a/src/app/features/user-card/user-card.component.scss
+++ b/src/app/features/user-card/user-card.component.scss
@@ -1,4 +1,7 @@
 :host {
 	flex: 1;
 	max-width: 370px;
+	@media only screen and (max-width: 400px) {
+		max-width: 360px;
+	}
 }
